--- a/fictionProject/fictionProject/templates/piece.html
+++ b/fictionProject/fictionProject/templates/piece.html
@@ -34,6 +34,7 @@
   </li>
   {% endfor %}
 </ul>
+<a href="{% url 'eventTiming' piece.pk %}">Event Timing</a>
 <form method="POST" action="." id="character_form">
 <h3>Character Form</h3>
   {% csrf_token %}
