Sort events by order in piece page. Order is editable via ajax in event page. Order is taken out from event form. Age is editable via ajax on character page.

--- a/fictionProject/fictionProject/templates/character.html
+++ b/fictionProject/fictionProject/templates/character.html
@@ -11,7 +11,7 @@
   <li id="c_fName">First Name: <input value="{{ character.first_name }}"/><button class="update_name">Update</button></li>
   <li id="c_mName">Middle Name: <input value="{{ character.middle_name }}"/><button class="update_name">Update</button></li>
   <li id="c_lName">Last Name: <input value="{{ character.last_name }}"/><button class="update_name">Update</button></li>
-  <li>Age: {{ character.age }}</li>
+  <li id="c_age">Age: <input value="{{ character.age }}"/><button class="update_age">Update</button></li>
   <li>Gender: {{ character.gender }}</li>
 </ul>
 {% endblock %}
