Gender in character page is editable via ajax.

--- a/fictionProject/fictionProject/templates/character.html
+++ b/fictionProject/fictionProject/templates/character.html
@@ -12,6 +12,6 @@
   <li id="c_mName">Middle Name: <input value="{{ character.middle_name }}"/><button class="update_name">Update</button></li>
   <li id="c_lName">Last Name: <input value="{{ character.last_name }}"/><button class="update_name">Update</button></li>
   <li id="c_age">Age: <input value="{{ character.age }}"/><button class="update_age">Update</button></li>
-  <li>Gender: {{ character.gender }}</li>
+  <li id="c_gender">Gender: <input value="{{ character.gender }}"/><button class="update_gender">Update</button></li>
 </ul>
 {% endblock %}
