--- a/fictionProject/piece/static/css/style.css
+++ b/fictionProject/piece/static/css/style.css
@@ -67,3 +67,34 @@ body {
     position:relative;
     margin-right: 0.7em;
 }
+
+/* piece page specifics  */
+#main_pane {
+    position: static;
+    /*width:66.6%;*/
+}
+
+#characters {
+    position: static;
+    /*float: left;
+    width: 50%;*/
+}
+
+#events {
+    position: static;
+    /*float: right;
+    width: 50%;
+    height:100%;*/
+}
+
+/*#eventTiming {
+    bottom:0em;
+    position:relative;
+    left:-32em;
+    top:10em;
+}*/
+
+/* index page  */
+#character_results_header {
+    display:none;
+}
