Added preliminary user profile, registration, and authentication support.

--- a/fictionProject/fictionProject/templates/base.html
+++ b/fictionProject/fictionProject/templates/base.html
@@ -12,12 +12,12 @@
     <div id="top_links">
       <ul>
 	<li>
-	  <a href="{% url 'index' %}">
+	  <a href="{% url index %}">
 	    Home
 	  </a>
 	</li>
 	<li>
-	  <a href="{% url 'pieces' %}">
+	  <a href="{% url pieces %}">
 	    Pieces
 	  </a>
 	</li>
