--- a/fictionProject/fictionProject/templates/pieces.html
+++ b/fictionProject/fictionProject/templates/pieces.html
@@ -5,7 +5,7 @@
 </h3>
 <ul>
   {% for piece in pieces %}
-  <li><a href="{% url 'piece' piece.pk %}">{{ piece.title }}</a></li>
+  <li><a href="{% url piece piece.pk %}">{{ piece.title }}</a></li>
   {% empty %}
   <p>You haven't planned any pieces, yet.</p>
   {% endfor %}
