--- a/fictionProject/fictionProject/templates/character.html
+++ b/fictionProject/fictionProject/templates/character.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block content %}
 <h2>Piece</h2>
-<a href="{% url 'piece' piecePK %}">{{ pieceTitle }}</a>
+<a href="{% url piece piecePK %}">{{ pieceTitle }}</a>
 <h3>Character</h3>
 <ul>
   <li id="c_name">Name: <input value="{{ character.name }}"/><button class="update_name">Update</button></li>
