--- a/fictionProject/fictionProject/templates/piece.html
+++ b/fictionProject/fictionProject/templates/piece.html
@@ -37,7 +37,7 @@
     <ul id="current_characters">
       {% for character in characters.all %}
       <li>
-	<a href="{% url 'character' piece.id character.id %}">
+	<a href="{% url character piece.id,character.id %}">
 	  {{ character.name }}
 	</a>
       </li>
@@ -68,7 +68,7 @@
     <ul id="current_events">
       {% for event in events.all %}
       <li>
-	<a href="{% url 'event' piece.id event.id %}">
+	<a href="{% url event piece.id,event.id %}">
 	  {{ event.name }}
 	</a>
       </li>
@@ -80,7 +80,7 @@
     </ul>
   </div>
   <article id="eventTiming">
-    <a href="{% url 'eventTiming' piece.pk %}">Event Timing</a>
+    <a href="{% url eventTiming piece.pk %}">Event Timing</a>
   </article>
 </div>
 <div id="form_envelope">
