--- a/fictionProject/fictionProject/templates/base.html
+++ b/fictionProject/fictionProject/templates/base.html
@@ -20,6 +20,17 @@
 	  <a href="{% url pieces %}">
 	    Pieces
 	  </a>
+    </li>
+    <li>
+      {% if not user.is_authenticated %}
+	  <a href="{% url my_login %}">
+	    Login
+	  </a>
+      {% else %}
+      <a href="{% url my_logout %}">
+	    Logout
+	  </a>
+      {% endif %}
 	</li>
       </ul>
     </div>
