--- a/fictionProject/fictionProject/templates/eventTiming.html
+++ b/fictionProject/fictionProject/templates/eventTiming.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block js %}
-<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+<script type="text/javascript" src="{{ STATIC_URL }}js/jquery-1.8.3.min.js"></script>
 <script type="text/javascript" src="{{ STATIC_URL }}js/script.js"></script>
 
 {% endblock %}
