Porting code for use with django 1.5. base off the release candidate. Also, using simple fixtures for less manual db interaction. Removed 'registration' for now. and ajax experiment on piece page. also, adjusted models.

--- a/fictionProject/fictionProject/templates/event.html
+++ b/fictionProject/fictionProject/templates/event.html
@@ -4,7 +4,7 @@
 <script type="text/javascript" src="{{ STATIC_URL }}js/script.js"></script>
 {% endblock %}
 {% block content %}<span style="display:none;" id="path">{{ path }}</span>
-<a href="{% url piece p_pk %}">
+<a href="{% url 'piece' p_pk %}">
   {{ pieceTitle }}
 </a>
 <h2>Event</h2>
