--- a/fictionProject/fictionProject/templates/index.html
+++ b/fictionProject/fictionProject/templates/index.html
@@ -23,7 +23,7 @@
 <h3>Welcome</h3>
 <p>Do you think story telling is easy? If so, get off this site.</p>
 <h4>On a less serious note</h4>
-<p>It's time to hunker down, pull out your fantastical writer's passion, and take a butcher knife to your fear. Get ready, set, <a href="accounts/register">Sign up</a>, or <a href="{% url my_login %}">Login</a>.</p>
+<p>It's time to hunker down, pull out your fantastical writer's passion, and take a butcher knife to your fear. Get ready, set, <a href="accounts/register">Sign up</a>, or <a href="{% url 'my_login' %}">Login</a>.</p>
 <h5>Right, right, sorry</h5>
 <p>You wanted to know what this site is about. In that case, here's a run-down:</p>
 <ul>
