--- a/fictionProject/fictionProject/templates/base.html
+++ b/fictionProject/fictionProject/templates/base.html
@@ -12,22 +12,22 @@
     <div id="top_links">
       <ul>
 	<li>
-	  <a href="{% url index %}">
+	  <a href="{% url 'index' %}">
 	    Home
 	  </a>
 	</li>
 	<li>
-	  <a href="{% url pieces %}">
+	  <a href="{% url 'pieces' %}">
 	    Pieces
 	  </a>
     </li>
     <li>
       {% if not user.is_authenticated %}
-	  <a href="{% url my_login %}">
+	  <a href="{% url 'my_login' %}">
 	    Login
 	  </a>
       {% else %}
-      <a href="{% url my_logout %}">
+      <a href="{% url 'my_logout' %}">
 	    Logout
 	  </a>
       {% endif %}
