--- a/fictionProject/fictionProject/templates/event.html
+++ b/fictionProject/fictionProject/templates/event.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
+{% block css %}
+{% endblock %}
 {% block js %}
 <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-1.8.3.min.js"></script>
 <script type="text/javascript" src="{{ STATIC_URL }}js/script.js"></script>
