--- a/fictionProject/fictionProject/templates/eventTiming.html
+++ b/fictionProject/fictionProject/templates/eventTiming.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+{% block css %}
+
+{% endblock css %}
 {% block js %}
 <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-1.8.3.min.js"></script>
 <script type="text/javascript" src="{{ STATIC_URL }}js/script.js"></script>
