--- a/fictionProject/fictionProject/templates/pieces.html
+++ b/fictionProject/fictionProject/templates/pieces.html
@@ -1,4 +1,10 @@
 {% extends "base.html" %}
+{% block css %}
+
+{% endblock css %}
+{% block js %}
+
+{% endblock js %}
 {% block content %}
 <h3>
   Pieces
