--- a/fictionProject/fictionProject/templates/piece.html
+++ b/fictionProject/fictionProject/templates/piece.html
@@ -42,6 +42,7 @@
 	  {{ character.name }}
 	</a>
       </li>
+      <li><a href="{% url 'character1' piece.id character.id %}">{{ character.name }}1</a></li>
       {% endfor %}
     </ul>
   </div>
@@ -83,6 +84,10 @@
   <article id="eventTiming">
     <a href="{% url 'eventTiming' piece.pk %}">Event Timing</a>
   </article>
+</div>
+<div id="text_editor">
+    <h3>Editor</h3>
+    <textarea id="editor_textarea" cols="80" rows="40" autofocus></textarea>
 </div>
 <div id="form_envelope">
   <form method="POST" action="." id="character_form">
