--- a/fictionProject/fictionProject/templates/event.html
+++ b/fictionProject/fictionProject/templates/event.html
@@ -5,7 +5,7 @@
 <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-1.8.3.min.js"></script>
 <script type="text/javascript" src="{{ STATIC_URL }}js/script.js"></script>
 {% endblock %}
-{% block content %}<span style="display:none;" id="path">{{ path }}</span>
+{% block content %}<span style="display:none;" id="path">{{ piece.get_absolute_url }}{{ event.get_absolute_url }}</span>
 <a href="{% url 'piece' p_pk %}">
   {{ pieceTitle }}
 </a>
