--- a/fiction/templates/eventTiming.html
+++ b/fiction/templates/eventTiming.html
@@ -1,10 +1,12 @@
 {% extends "base.html" %}
+{% load staticfiles %}
+
 {% block css %}
 
 {% endblock css %}
 {% block js %}
-<script type="text/javascript" src="{{ STATIC_URL }}js/jquery-1.8.3.min.js"></script>
-<script type="text/javascript" src="{{ STATIC_URL }}js/script.js"></script>
+<script type="text/javascript" src="{% static 'js/jquery-3.1.0.min.js'%}"></script>
+<script type="text/javascript" src="{% static 'js/piece_script.js'%}"></script>
 
 {% endblock %}
 {% block content %}
